[gd_scene load_steps=6 format=3 uid="uid://g6e1ewjfjhtf"]

[ext_resource type="Script" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_UserInput.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c0mw0jwbq1np4" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="2"]
[ext_resource type="Theme" uid="uid://cvs3ru70gnho3" path="res://addons/UDSEngine/Database_Manager/Theme and Style/main_15.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://blyuurjsfw16s" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/ItemType_Selection.tscn" id="5_uiw4g"]

[node name="Input_UserInput" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("3")
script = ExtResource("1")

[node name="Label" parent="." instance=ExtResource("4")]
layout_mode = 2
size_flags_stretch_ratio = 1.0

[node name="input_templateBuffer2" parent="." instance=ExtResource("2")]
layout_mode = 2

[node name="ActionSelection" parent="." instance=ExtResource("5_uiw4g")]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_vertical = 3
selection_table_name = "Input Actions"
label_text = "Input Action"
is_label_button = false
show_field = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Label3" parent="HBoxContainer" instance=ExtResource("4")]
layout_mode = 2
size_flags_stretch_ratio = 1.0

[node name="HBox1" parent="HBoxContainer/Label3" index="0"]
custom_minimum_size = Vector2(0, 30)

[node name="Label_Button" parent="HBoxContainer/Label3/HBox1" index="0"]
text = "Input Action Keys"

[node name="AddKeyButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "+"

[node name="Scroll1" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_vertical = 3

[node name="Input" type="VBoxContainer" parent="Scroll1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_up" from="HBoxContainer/AddKeyButton" to="." method="add_new_key"]

[editable path="HBoxContainer/Label3"]
